# Bot_Photo_Kwork

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  pyproject.toml  requirements.txt
